Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjNumber.quorum
class Main
    action Main
        number v = 5.0
        Test(v)
    end

    action Test(Number var)
    end
end
